[package]
name = "auction_house"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auction_house"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor" }
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.9.1", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = { version = "1.3.0", features = ["no-entrypoint"] }
thiserror = "1.0.40"
arrayref = "0.3.7"

[dev-dependencies]
solana-program-test = "1.14"
anchor-client = { git = "https://github.com/coral-xyz/anchor" }
